@@ -1,6 +1,8 @@
 package com.hti.serviceimpl;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -14,9 +16,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import com.hti.Repository.EntityMetadataRepository;
 import com.hti.Repository.OrganisationEntityRepository;
 import com.hti.Repository.OrganisationRepository;
+import com.hti.entity.EntityMetadata;
 import com.hti.entity.OrganisationEntity;
+import com.hti.exception.BadRequestException;
 import com.hti.exception.InternalServerException;
 import com.hti.exception.NotFoundException;
 import com.hti.mapper.OrganisationEntityMapper;
@@ -42,11 +47,61 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
 
     private final OrganisationEntityRepository repository;
     private final OrganisationRepository organisationRepository;
+    private final EntityMetadataRepository entityMetadataRepository;
+
+    // ----------------------------------------------------------------
+    // JSON Attribute Validation against Entity Metadata Template
+    // ----------------------------------------------------------------
+    private void validateAttributes(Map<String, Object> template, Map<String, Object> incoming) {
+
+        if (template == null || template.isEmpty()) {
+            logger.error("Metadata template has no defined keys");
+            throw new BadRequestException("Metadata template has no defined keys to validate against");
+        }
+
+        if (incoming == null || incoming.isEmpty()) {
+            logger.error("Attributes cannot be null or empty");
+            throw new BadRequestException("Attributes cannot be null or empty");
+        }
+
+        Set<String> expectedKeys = template.keySet();
+        Set<String> incomingKeys = incoming.keySet();
+
+        // Check for missing keys
+        Set<String> missingKeys = expectedKeys.stream()
+                .filter(k -> !incomingKeys.contains(k))
+                .collect(Collectors.toSet());
+        if (!missingKeys.isEmpty()) {
+            logger.error("Attributes validation failed – missing keys | missing={}", missingKeys);
+            throw new BadRequestException("Missing required attribute keys: " + missingKeys);
+        }
+
+        // Check for extra keys
+        Set<String> extraKeys = incomingKeys.stream()
+                .filter(k -> !expectedKeys.contains(k))
+                .collect(Collectors.toSet());
+        if (!extraKeys.isEmpty()) {
+            logger.error("Attributes validation failed – extra keys | extra={}", extraKeys);
+            throw new BadRequestException("Unexpected attribute keys not defined in metadata template: " + extraKeys);
+        }
+
+        // Check for null or empty values
+        List<String> emptyValueKeys = incomingKeys.stream()
+                .filter(k -> {
+                    Object val = incoming.get(k);
+                    return val == null || val.toString().trim().isEmpty();
+                })
+                .collect(Collectors.toList());
+        if (!emptyValueKeys.isEmpty()) {
+            logger.error("Attributes validation failed – empty values | keys={}", emptyValueKeys);
+            throw new BadRequestException("Attribute values cannot be null or empty for keys: " + emptyValueKeys);
+        }
+    }
 
     @Override
     @Transactional
     public ResponseEntity<?> create(OrganisationEntityRequest request) {
-        logger.info("Creating entity | type={} orgId={}", request.getEntityType(), request.getOrganisationId());
+        logger.info("Creating entity | orgId={} metaId={}", request.getOrganisationId(), request.getMetaId());
         dbLogger.info("DB check – organisation exists | orgId={}", request.getOrganisationId());
 
         if (!organisationRepository.existsById(request.getOrganisationId())) {
@@ -54,23 +109,39 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
             dbLogger.error("DB check – organisation not found | orgId={}", request.getOrganisationId());
             throw new NotFoundException("Organisation not found: " + request.getOrganisationId());
         }
+
+        dbLogger.info("DB check – entity metadata exists | metaId={}", request.getMetaId());
+        EntityMetadata entityMetadata = entityMetadataRepository.findById(request.getMetaId())
+                .orElseThrow(() -> {
+                    logger.error("Entity metadata not found | metaId={}", request.getMetaId());
+                    dbLogger.error("DB check – entity metadata not found | metaId={}", request.getMetaId());
+                    return new NotFoundException("Entity metadata not found: " + request.getMetaId());
+                });
+
+        logger.info("Validating attributes against metadata template | metaId={}", request.getMetaId());
+        validateAttributes(entityMetadata.getMetadata(), request.getAttributes());
+        logger.info("Attributes validation passed | metaId={}", request.getMetaId());
+
         try {
             OrganisationEntity entity = OrganisationEntity.builder()
                     .organisationId(request.getOrganisationId())
-                    .entityType(request.getEntityType())
+                    .metaId(request.getMetaId())
                     .priority(request.getPriority())
                     .attributes(request.getAttributes())
+                    .createdBy(request.getCreatedBy())
                     .build();
 
-            dbLogger.info("DB insert – saving entity | type={} orgId={}", request.getEntityType(), request.getOrganisationId());
+            dbLogger.info("DB insert – saving entity | orgId={} metaId={}", request.getOrganisationId(), request.getMetaId());
             entity = repository.save(entity);
-            logger.info("Entity created successfully | id={} type={}", entity.getId(), entity.getEntityType());
+            logger.info("Entity created successfully | id={}", entity.getId());
             dbLogger.info("DB insert – entity saved successfully | id={}", entity.getId());
             return ResponseEntity.status(HttpStatus.CREATED).body(OrganisationEntityMapper.toResponse(entity));
 
+        } catch (BadRequestException ex) {
+            throw ex;
         } catch (Exception ex) {
-            logger.error("Error creating entity | type={}", request.getEntityType(), ex);
-            dbLogger.error("DB insert failed | type={} error={}", request.getEntityType(), ex.getMessage());
+            logger.error("Error creating entity | orgId={}", request.getOrganisationId(), ex);
+            dbLogger.error("DB insert failed | error={}", ex.getMessage());
             throw new InternalServerException("Failed to create entity: " + ex.getMessage());
         }
     }
@@ -88,16 +159,27 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
         });
 
         try {
-            if (request.getEntityType() != null)  entity.setEntityType(request.getEntityType());
-            if (request.getPriority()   != null)  entity.setPriority(request.getPriority());
-            if (request.getAttributes() != null)  entity.setAttributes(request.getAttributes());
+            if (request.getAttributes() != null) {
+                dbLogger.info("DB check – fetching metadata template for attribute validation | metaId={}", entity.getMetaId());
+                EntityMetadata entityMetadata = entityMetadataRepository.findById(entity.getMetaId())
+                        .orElseThrow(() -> new NotFoundException("Entity metadata not found: " + entity.getMetaId()));
+                logger.info("Validating updated attributes against metadata template | metaId={}", entity.getMetaId());
+                validateAttributes(entityMetadata.getMetadata(), request.getAttributes());
+                logger.info("Attributes validation passed for update | metaId={}", entity.getMetaId());
+                entity.setAttributes(request.getAttributes());
+            }
+            if (request.getPriority()  != null) entity.setPriority(request.getPriority());
+            if (request.getIsActive()  != null) entity.setActive(request.getIsActive());
+            if (request.getUpdatedBy() != null) entity.setUpdatedBy(request.getUpdatedBy());
 
             dbLogger.info("DB update – saving entity | id={}", id);
-            entity = repository.save(entity);
-            logger.info("Entity updated successfully | id={}", entity.getId());
-            dbLogger.info("DB update – entity saved successfully | id={}", entity.getId());
-            return ResponseEntity.ok(OrganisationEntityMapper.toResponse(entity));
+            OrganisationEntity savedEntity = repository.save(entity);
+            logger.info("Entity updated successfully | id={}", savedEntity.getId());
+            dbLogger.info("DB update – entity saved successfully | id={}", savedEntity.getId());
+            return ResponseEntity.ok(OrganisationEntityMapper.toResponse(savedEntity));
 
+        } catch (NotFoundException | BadRequestException ex) {
+            throw ex;
         } catch (Exception ex) {
             logger.error("Error updating entity | id={}", id, ex);
             dbLogger.error("DB update failed | id={} error={}", id, ex.getMessage());
@@ -109,9 +191,8 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
     @Transactional
     public ResponseEntity<?> delete(UUID id) {
         logger.info("Deleting entity | id={}", id);
-
-        // Fix #6 – single DB hit: findById instead of existsById + deleteById
         dbLogger.info("DB select – fetching entity for delete | id={}", id);
+
         OrganisationEntity entity = repository.findById(id).orElseThrow(() -> {
             logger.error("Entity not found | id={}", id);
             dbLogger.error("DB select – entity not found | id={}", id);
@@ -150,31 +231,32 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
 
     @Override
     public ResponseEntity<?> getAll(int page, int size, String sortBy, String sortDirection,
-            String search, String entityType, Integer priority, UUID organisationId) {
+            String search, Integer priority, UUID organisationId, Boolean isActive) {
         logger.info("Fetching organisation entities | page={} size={} sortBy={} sortDir={} search={}",
                 page, size, sortBy, sortDirection, search);
-        dbLogger.info("DB select – querying entities with filters | entityType={} priority={} orgId={}",
-                entityType, priority, organisationId);
+        dbLogger.info("DB select – querying entities | priority={} orgId={} isActive={}", priority, organisationId, isActive);
+
         try {
-            // Fix #14 – constants instead of magic strings
-            int safePage = Math.max(page, 0);
-            int safeSize = Math.min(Math.max(size, 5), 100);
+            int safePage  = Math.max(page, 0);
+            int safeSize  = Math.min(Math.max(size, 5), 100);
             String sortField  = (sortBy != null && !sortBy.isBlank()) ? sortBy : DEFAULT_SORT_FIELD;
             Sort.Direction dir = (sortDirection != null && sortDirection.equalsIgnoreCase(SORT_ASC))
                     ? Sort.Direction.ASC : Sort.Direction.DESC;
 
             Pageable pageable = PageRequest.of(safePage, safeSize, Sort.by(dir, sortField));
 
-            // Fix #10 – spec builder extracted to OrganisationEntitySpecification
             Page<OrganisationEntity> result = repository.findAll(
-                    OrganisationEntitySpecification.buildSpec(search, entityType, priority, organisationId),
+                    OrganisationEntitySpecification.buildSpec(search, priority, organisationId, isActive),
                     pageable);
 
             if (result.getTotalElements() == 0) {
                 throw new NotFoundException("No Organisation Entity found.");
             }
+            if (safePage >= result.getTotalPages()) {
+                throw new NotFoundException(String.format("Page %d not found. Total available pages: %d",
+                        safePage + 1, result.getTotalPages()));
+            }
 
-            // Fix #9 – toResponse() extracted to OrganisationEntityMapper
             var content = result.getContent().stream()
                     .map(OrganisationEntityMapper::toResponse).toList();
 
@@ -201,7 +283,7 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
         dbLogger.info("DB select – fetching entities by orgId | orgId={}", organisationId);
 
         List<OrganisationEntityResponse> list = repository.findByOrganisationId(organisationId)
-                .stream().map(OrganisationEntityMapper::toResponse).collect(Collectors.toList());
+                .stream().map(OrganisationEntityMapper::toResponse).toList();
 
         if (list.isEmpty()) {
             logger.error("No entities found | orgId={}", organisationId);
@@ -215,25 +297,6 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
     }
 
     @Override
-    public ResponseEntity<?> getByEntityType(String entityType) {
-        logger.info("Fetching entities by type | type={}", entityType);
-        dbLogger.info("DB select – fetching entities by type | type={}", entityType);
-
-        List<OrganisationEntityResponse> list = repository.findByEntityType(entityType)
-                .stream().map(OrganisationEntityMapper::toResponse).collect(Collectors.toList());
-
-        if (list.isEmpty()) {
-            logger.error("No entities found | type={}", entityType);
-            dbLogger.error("DB select – no entities found | type={}", entityType);
-            throw new NotFoundException("No entities found for type: " + entityType);
-        }
-
-        logger.info("Entities fetched successfully | type={} count={}", entityType, list.size());
-        dbLogger.info("DB select – entities fetched | type={} count={}", entityType, list.size());
-        return ResponseEntity.ok(list);
-    }
-
-    @Override
     public ResponseEntity<?> searchByAttribute(UUID organisationId, String key, String value) {
         logger.info("Searching entity by attribute | orgId={} key={} value={}", organisationId, key, value);
         dbLogger.info("DB select – attribute search | orgId={} key={} value={}", organisationId, key, value);
@@ -241,7 +304,7 @@ public class OrganisationEntityImpl implements OrganisationEntityService {
         try {
             List<OrganisationEntityResponse> list = repository
                     .findByOrganisationIdAndAttribute(organisationId, key, value)
-                    .stream().map(OrganisationEntityMapper::toResponse).collect(Collectors.toList());
+                    .stream().map(OrganisationEntityMapper::toResponse).toList();
 
             if (list.isEmpty()) {
                 logger.error("No entities found | key={} value={}", key, value);
